--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .parent {
+            padding: 50px;
+            background-color: red;
+            margin: 0 auto;
+            width: 80%;
+        }
+        .child {
+            background-color: blue;
+            height: 250px;
+        }
 
+    </style>
+</head>
+<body>
+    <div class="parent"><div class="child"></div></div>
+</body>
+</html>
